SERVER-62242 fixed $indexOfArray handling of duplicate vals in const arrays